<resources>
    <string name="app_name">Inventory Fragment</string>
    <string name="DescripcionLogotipo">Logotipo de la aplicacion. Son varias cajas de cartón de color marrón y delante hay un ordenador mostrando varias tareas</string>
    <string name="iniciar_sesion">Iniciar Sesión</string>
    <string name="registrarse"><u>Registrarse</u></string>
    <string name="usuario_correo">Usuario o Correo Electronico</string>
    <string name="contrasenia">Contraseña</string>
    <string name="recuerdame">Recuérdame</string>
    <string name="iniciar_con_telegram">Iniciar con Telegram</string>
    <string name="o_inicia_sesion_con">O inicia sesión con...</string>
    <string name="inventario">Inventario</string>
    <string name="dependencias">Dependencias</string>
    <string name="sectores">Sectores</string>
    <string name="productos">Productos</string>
    <string name="perfil">Perfil</string>
    <string name="ajustes">Ajustes</string>
    <string name="nombre">Nombre</string>
    <string name="fecha_de_nacimiento">Fecha de nacimiento</string>
    <string name="cancelar">Cancelar</string>
    <string name="usuario">Usuario</string>
    <string name="correo">Correo Electronico</string>
    <string name="repetir_contrasenia">Repetir Contraseña</string>

    <string-array name="inventory_years">
        <item>2018</item>
        <item>2019</item>
        <item>2020</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sobre_m">Sobre mí</string>
    <string name="ayuda">Ayuda</string>
    <string name="buscar">Buscar</string>
    <string name="compartir">Compartir</string>
    <string name="channel_name">canal de notificacion</string>
    <string name="channel_description">Mi notificacion Inventory</string>
</resources>
